# drogular

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
docs/: DEVELOPER_EXPERIENCE_AUDIT.md
examples/auth_sample/: CMakeLists.txt  admin_page.hpp  auth_service.cpp  auth_service.hpp  auth_session.hpp  auth_store.hpp  auth_template_path.hpp  auth_user.hpp  dashboard_page.hpp  home_page.hpp  login_action.hpp  login_page.hpp  logout_action.hpp  main.cpp
examples/auth_sample/templates/: admin.html  dashboard.html  home.html  login.html
examples/portal_demo/: CMakeLists.txt  main.cpp  portal_auth_support.hpp  portal_error_translator.hpp  portal_locale.hpp  portal_memory_project_provider.hpp  portal_memory_user_provider.hpp  portal_page_support.hpp  portal_project.hpp  portal_project_provider.hpp  portal_project_repository.hpp  portal_translations.hpp  portal_user.hpp  portal_user_provider.hpp  portal_user_repository.hpp
examples/portal_demo/actions/: create_project_action.hpp  create_user_action.hpp  delete_project_action.hpp  language_action.hpp  login_action.hpp  logout_action.hpp  update_project_action.hpp
examples/repository_sample/: CMakeLists.txt  create_user_action.hpp  main.cpp  user.hpp  user_repository.hpp  users_page.hpp
examples/todo_pwa/: CMakeLists.txt  create_todo_action.hpp  delete_todo_action.hpp  main.cpp  offline_page.hpp  todo.hpp  todo_item_component.hpp  todo_page.cpp  todo_page.hpp  todo_service.cpp  todo_service.hpp  todo_store.hpp  toggle_todo_action.hpp
include/drogular/: action_auth_support.hpp  action_context.hpp  action_handler.hpp  action_response.hpp  action_result.hpp  action_validation_error.hpp  app.hpp  application_options.hpp  auth_support.hpp  compiled_template.hpp  component.hpp  component_registry.hpp  component_renderer.hpp  dependency_graph.hpp  form_validator.hpp  graphql.hpp  graphql_client.hpp  graphql_request.hpp  graphql_response.hpp  inject.hpp  locale_support.hpp  page.hpp  page_auth_support.hpp  page_support.hpp  pwa_html.hpp  pwa_options.hpp  pwa_page_support.hpp  pwa_scripts.hpp  render_context.hpp  route_pattern.hpp  router.hpp  services.hpp  session.hpp  session_store.hpp  state.hpp  static_file_cache_profile.hpp  static_file_content_type.hpp  static_file_etag.hpp  static_file_last_modified.hpp  static_file_mapping.hpp  (+17 more)
src/: action_auth_support.cpp  action_context.cpp  action_response.cpp  action_result.cpp  action_validation_error.cpp  app.cpp  auth_support.cpp  compiled_template.cpp  component.cpp  component_registry.cpp  component_renderer.cpp  dependency_graph.cpp  form_validator.cpp  graphql.cpp  graphql_client.cpp  graphql_request.cpp  graphql_response.cpp  locale_support.cpp  page.cpp  page_auth_support.cpp  page_support.cpp  pwa_html.cpp  pwa_page_support.cpp  pwa_scripts.cpp  render_context.cpp  route_pattern.cpp  router.cpp  services.cpp  session.cpp  session_store.cpp  static_file_content_type.cpp  static_file_etag.cpp  static_file_last_modified.cpp  static_file_resolver.cpp  static_file_response.cpp  template_ast.cpp  template_cache.cpp  template_diagnostics.cpp  template_engine.cpp  template_loader.cpp  (+7 more)
tests/: CMakeLists.txt  action_context_tests.cpp  action_handler_tests.cpp  action_integration_tests.cpp  action_response_tests.cpp  action_result_tests.cpp  action_validation_error_tests.cpp  admin_page_tests.cpp  app_tests.cpp  auth_sample_auth_service_tests.cpp  auth_sample_login_action_tests.cpp  auth_service_tests.cpp  auth_store_tests.cpp  compiled_template_tests.cpp  component_lifecycle_tests.cpp  component_registry.cpp  component_renderer_tests.cpp  component_state_subscription_tests.cpp  component_state_tests.cpp  component_tests.cpp  core_action_context_tests.cpp  core_action_integration_tests.cpp  core_component_renderer_tests.cpp  core_component_tests.cpp  core_http_graphql_client_tests.cpp  core_services_tests.cpp  core_shared_state_tests.cpp  core_template_cache_tests.cpp  core_template_tokenizer_tests.cpp  dashboard_page_tests.cpp  dependency_graph_tests.cpp  form_validator_tests.cpp  graphql_client_tests.cpp  graphql_request_tests.cpp  graphql_response_tests.cpp  graphql_result_tests.cpp  graphql_tests.cpp  home_page_tests.hpp  http_graphql_client_tests.cpp  inject_tests.cpp  (+21 more)
tests/auth_sample/: auth_sample_admin_page_tests.cpp  auth_sample_auth_store_tests.cpp  auth_sample_dashboard_page_tests.cpp  auth_sample_home_page_tests.hpp  auth_sample_login_action_tests.cpp  auth_sample_logout_action_tests.cpp  auth_sample_test_helpers.hpp  auth_sample_test_services.hpp
tests/core/: core_action_auth_support_tests.cpp  core_action_context_tests.cpp  core_action_handler_tests.cpp  core_action_response_tests.cpp  core_action_result_tests.cpp  core_action_validation_error_tests.cpp  core_app_tests.cpp  core_application_options_tests.cpp  core_auth_support_tests.cpp  core_compiled_template_tests.cpp  core_component_lifecycle_tests.cpp  core_component_registry_tests.cpp  core_component_renderer_tests.cpp  core_component_state_subscription_tests.cpp  core_component_state_tests.cpp  core_component_tests.cpp  core_dependency_graph_tests.cpp  core_form_validator_tests.cpp  core_graphql_client_tests.cpp  core_graphql_request_tests.cpp  core_graphql_response_tests.cpp  core_graphql_result_tests.cpp  core_graphql_tests.cpp  core_inject_tests.cpp  core_locale_support_tests.cpp  core_page_auth_support_tests.cpp  core_page_support_tests.cpp  core_pwa_html_tests.cpp  core_pwa_page_support_tests.cpp  core_pwa_scripts_tests.cpp  core_render_context_tests.cpp  core_route_pattern_tests.cpp  core_session_store_tests.cpp  core_session_tests.cpp  core_shared_state_tests.cpp  core_state_tests.cpp  core_static_file_content_type_tests.cpp  core_static_file_etag_tests.cpp  core_static_file_last_modified_tests.cpp  core_static_file_resolver_tests.cpp  (+16 more)
tests/repository_sample/: repository_sample_create_user_action_tests.cpp  repository_sample_user_repository_tests.cpp  repository_sample_users_page_tests.cpp
tests/todo_pwa/: todo_pwa_todo_page_tests.cpp  todo_pwa_todo_store_tests.cpp
(+48 files in other folders)
