add_executable(drogular_tests
    app_tests.cpp
    action_result_tests.cpp
    action_context_tests.cpp
    action_handler_tests.cpp
    action_response_tests.cpp
    action_integration_tests.cpp
    action_validation_error_tests.cpp
    component_registry_tests.cpp
    component_renderer_tests.cpp
    component_tests.cpp
    component_lifecycle_tests.cpp
    compiled_template_tests.cpp
    dependency_graph_tests.cpp
    http_graphql_client_tests.cpp
    graphql_client_tests.cpp
    graphql_result_tests.cpp
    graphql_tests.cpp
    graphql_request_tests.cpp
    graphql_response_tests.cpp
    inject_tests.cpp
    render_context_tests.cpp
    services_tests.cpp
    state_tests.cpp
    template_component_tests.cpp
    template_engine_tests.cpp
    template_page_tests.cpp
    template_tokenizer_tests.cpp
    template_ast_tests.cpp
    template_parser_tests.cpp
    template_runtime_tests.cpp
    template_cache_tests.cpp
    template_diagnostics_tests.cpp
    testing_tests.cpp
    todo_page_tests.cpp
    ../examples/todo_pwa/todo_page.cpp
    ../examples/todo_pwa/todo_service.cpp
)

target_link_libraries(drogular_tests
    PRIVATE
    Drogular::drogular
    GTest::gtest_main
)

target_include_directories(drogular_tests
    PRIVATE
    ${CMAKE_SOURCE_DIR}/examples/todo_pwa
)

include(GoogleTest)

gtest_discover_tests(drogular_tests)