add_executable(drogular_tests
    core/core_app_tests.cpp
    core/core_application_options_tests.cpp
    core/core_action_result_tests.cpp
    core/core_action_context_tests.cpp
    core/core_action_handler_tests.cpp
    core/core_action_response_tests.cpp
    core/core_action_integration_tests.cpp
    core/core_action_validation_error_tests.cpp
    core/core_component_registry_tests.cpp
    core/core_component_renderer_tests.cpp
    core/core_component_tests.cpp
    core/core_component_lifecycle_tests.cpp
    core/core_component_state_tests.cpp
    core/core_component_state_subscription_tests.cpp
    core/core_compiled_template_tests.cpp
    core/core_dependency_graph_tests.cpp
    core/core_http_graphql_client_tests.cpp
    core/core_graphql_client_tests.cpp
    core/core_graphql_result_tests.cpp
    core/core_graphql_tests.cpp
    core/core_graphql_request_tests.cpp
    core/core_graphql_response_tests.cpp
    core/core_form_validator_tests.cpp
    core/core_inject_tests.cpp
    core/core_locale_support_tests.cpp
    core/core_pwa_scripts_tests.cpp
    core/core_pwa_html_tests.cpp
    core/core_pwa_page_support_tests.cpp
    core/core_render_context_tests.cpp
    core/core_services_tests.cpp
    core/core_session_tests.cpp
    core/core_session_store_tests.cpp
    core/core_state_tests.cpp
    core/core_shared_state_tests.cpp
    core/core_store_pattern_tests.cpp
    core/core_static_file_resolver_tests.cpp
    core/core_static_file_content_type_tests.cpp
    core/core_static_file_response_tests.cpp
    core/core_static_file_etag_tests.cpp
    core/core_static_file_last_modified_tests.cpp
    core/core_template_component_tests.cpp
    core/core_template_engine_tests.cpp
    core/core_template_page_tests.cpp
    core/core_template_tokenizer_tests.cpp
    core/core_template_ast_tests.cpp
    core/core_template_parser_tests.cpp
    core/core_template_runtime_tests.cpp
    core/core_template_cache_tests.cpp
    core/core_template_source_cache_tests.cpp
    core/core_template_diagnostics_tests.cpp
    core/core_template_loader_tests.cpp
    core/core_template_preprocessor_tests.cpp
    core/core_validation_result_tests.cpp
    core/core_page_support_tests.cpp
    core/core_page_auth_support_tests.cpp
    core/core_auth_support_tests.cpp
    core/core_testing_tests.cpp
    core/core_translation_support_tests.cpp
    core/core_url_tests.cpp
    todo_pwa/todo_pwa_todo_page_tests.cpp
    todo_pwa/todo_pwa_todo_store_tests.cpp
    ../examples/todo_pwa/todo_page.cpp
    auth_sample/auth_sample_auth_service_tests.cpp
    auth_sample/auth_sample_login_action_tests.cpp
    auth_sample/auth_sample_logout_action_tests.cpp
    auth_sample/auth_sample_home_page_tests.hpp
    auth_sample/auth_sample_dashboard_page_tests.cpp
    auth_sample/auth_sample_admin_page_tests.cpp
    ../examples/auth_sample/auth_service.cpp
    repository_sample/repository_sample_user_repository_tests.cpp
    repository_sample/repository_sample_users_page_tests.cpp
    repository_sample/repository_sample_create_user_action_tests.cpp
)

target_link_libraries(drogular_tests
    PRIVATE
    Drogular::drogular
    GTest::gtest_main
)

target_include_directories(drogular_tests
    PRIVATE
    ${CMAKE_SOURCE_DIR}/examples/todo_pwa
)

include(GoogleTest)

gtest_discover_tests(drogular_tests)